# danmakw

./: Cargo.toml  README.md
examples/: Cargo.toml  gtk4.rs  gtk_vulkan_dmabuf.rs  gtk_wgpu_gles_framebuffer.rs  test.xml  winit.rs
examples/gtk/: app.rs  channel.rs  danmaku_area.rs  export.rs  mod.rs  renderer.rs  window.rs
examples/gtk_example/: app.rs  channel.rs  danmaku_area.rs  dmabuf_texture.rs  mod.rs  renderer.rs  renderer_event.rs  window.rs
examples/gtk_vulkan_dmabuf_example/: app.rs  channel.rs  danmaku_area.rs  mod.rs  renderer.rs  renderer_event.rs  window.rs
examples/gtk_wgpu_gles_framebuffer_example/: area.rs  mod.rs  renderer.rs
examples/utils/: mod.rs
src/: clock.rs  lib.rs
src/danmaku/: mod.rs  queue.rs  sort.rs
src/gtk_wgpu_gles_framebuffer_example/: area.rs  mod.rs  renderer.rs  timer.rs
src/gtkgl/: area.rs  mod.rs  renderer.rs
src/renderer/: export_texture.rs  mod.rs  render.rs  shader.wgsl
