[package]
name = "danmakw"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"

[dependencies]
wgpu = { version = "25.0.0", git = "https://github.com/Doublonmousse/wgpu", branch = "external-gles-framebuffer" }
wgpu-hal = { git = "https://github.com/Doublonmousse/wgpu", branch = "external-gles-framebuffer", version = "25.0.0" }
wgpu-types = { version = "25.0.0", git = "https://github.com/Doublonmousse/wgpu", branch = "external-gles-framebuffer" }
winit = "0.30"
cosmic-text = "0.14"
pollster = "0.4"
glow = "0.16.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rand = "0.9"
glyphon = { git = "https://github.com/tsukinaha/glyphon.git" }
quick-xml = { version = "0.37.4", features = ["serialize"] }
thiserror = "2.0"
ash = "0.38"
epoxy = { version = "0.1", optional = true }
libloading = "0.8.7"
gtk = { version = "0.9", package = "gtk4", features = ["v4_18"], optional = true}
gdk = { version = "0.9", package = "gdk4", features = ["v4_18"], optional = true }
adw = { version = "0.7", package = "libadwaita", features = ["v1_7"], optional = true }
flume = "0.11"
once_cell = "1.21"

[features]
default = ["gtk4-gles"]
gtk4-gles = ["gtk", "gdk", "adw", "epoxy"]
export-texture = []
