[package]
name = "danmakw"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"

[dependencies]
wgpu = "27"
wgpu-hal = "27"
wgpu-types = "27"
winit = "0.30"
cosmic-text = "0.14"
pollster = "0.4"
glow = "0.16.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rand = "0.9"
glyphon = { git = "https://github.com/tsukinaha/glyphon.git", version = "0.9.0" }
quick-xml = { version = "0.37.4", features = ["serialize"] }
thiserror = "2.0"
ash = "0.38"
epoxy = { version = "0.1", optional = true }
libloading = "0.8.7"
gtk = { version = "0.9", package = "gtk4", features = [
  "v4_18",
], optional = true }
gdk = { version = "0.9", package = "gdk4", features = [
  "v4_18",
], optional = true }
adw = { version = "0.7", package = "libadwaita", features = [
  "v1_7",
], optional = true }
flume = "0.11"
once_cell = "1.21"

[features]
default = ["gtk4-gles"]
gtk4-gles = ["gtk", "gdk", "adw", "epoxy"]
export-texture = []
