[package]
name = "danmakw"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"

[dependencies]
wgpu = "27"
wgpu-hal = "27"
wgpu-types = "27"

glow = "0.16.0"
glyphon = { git = "https://github.com/tsukinaha/glyphon.git", version = "0.9.0" }

thiserror = "2.0"
epoxy = { version = "0.1"}
libloading = "0.8.7"
gtk = { version = "0.9", package = "gtk4", features = [
  "v4_18",
] }
gdk = { version = "0.9", package = "gdk4", features = [
  "v4_18",
] }
adw = { version = "0.7", package = "libadwaita", features = [
  "v1_7",
]}
flume = "0.11"
once_cell = "1.21"

[dev-dependencies]
winit = "0.30"
quick-xml = { version = "0.37.4", features = ["serialize"] }
pollster = "0.4"

[[example]]
name = "gtk_wgpu_gles_framebuffer"
path = "examples/gtk_wgpu_gles_framebuffer.rs"

[[example]]
name = "winit"
path = "examples/winit.rs"
